[gd_scene load_steps=17 format=3 uid="uid://b56xc2lavl48h"]

[ext_resource type="Script" path="res://addons/delirious_biznasty/scripts/game_info.gd" id="1_6dhbe"]
[ext_resource type="Script" path="res://addons/delirious_biznasty/scripts/entity_manager.gd" id="2_k54cv"]
[ext_resource type="Script" path="res://addons/delirious_biznasty/scripts/entity.gd" id="3_kxsl0"]
[ext_resource type="Script" path="res://addons/delirious_biznasty/scripts/Components/item_component.gd" id="4_vvxed"]
[ext_resource type="Resource" path="res://test_item.tres" id="5_ojq6f"]
[ext_resource type="Script" path="res://addons/delirious_biznasty/scripts/Components/interactive_component.gd" id="6_ox50e"]
[ext_resource type="PackedScene" uid="uid://c1bwgrswdshee" path="res://player.tscn" id="6_ti5ed"]
[ext_resource type="Script" path="res://addons/delirious_biznasty/scripts/Components/npc_component.gd" id="6_yl66l"]
[ext_resource type="Script" path="res://addons/delirious_biznasty/scripts/Components/puppet_spawner_component.gd" id="7_6rhup"]
[ext_resource type="Resource" uid="uid://cqtqwsfkqdt2t" path="res://test_npc.tres" id="7_bmxt5"]
[ext_resource type="Script" path="res://addons/delirious_biznasty/scripts/Components/player_component.gd" id="10_ewjpv"]
[ext_resource type="PackedScene" uid="uid://cb36xhkpqr1j4" path="res://ui scripts/hud.tscn" id="10_vve1a"]
[ext_resource type="Script" path="res://addons/delirious_biznasty/scripts/Components/teleport_component.gd" id="11_b46tl"]
[ext_resource type="Script" path="res://addons/delirious_biznasty/scripts/world_loader.gd" id="13_wc36v"]
[ext_resource type="PackedScene" uid="uid://dx6grfuxk8jg1" path="res://ui scripts/menu.tscn" id="14_ivpc4"]
[ext_resource type="PackedScene" uid="uid://d3xvrivp3iwfb" path="res://Worlds/test_world_1.tscn" id="14_t7217"]

[node name="Game" type="Node3D"]

[node name="GameInfo" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_6dhbe")
world = "test world 1"

[node name="EntityManager" type="Node" parent="."]
unique_name_in_owner = true
process_priority = -1
script = ExtResource("2_k54cv")

[node name="TestEntity" type="Node" parent="EntityManager" groups=["savegame_entity"]]
script = ExtResource("3_kxsl0")
world = "test world 1"
position = Vector3(0, 3, 0)

[node name="ItemComponent" type="Node" parent="EntityManager/TestEntity"]
script = ExtResource("4_vvxed")
data = ExtResource("5_ojq6f")

[node name="InteractiveComponent" type="Node" parent="EntityManager/TestEntity"]
script = ExtResource("6_ox50e")

[node name="PuppetSpawnerComponent" type="Node" parent="EntityManager/TestEntity"]
script = ExtResource("7_6rhup")

[node name="TestNPC" type="Node" parent="EntityManager" groups=["savegame_entity"]]
script = ExtResource("3_kxsl0")
world = "test world 1"
position = Vector3(1.5, 0, 0)

[node name="NPCComponent" type="Node" parent="EntityManager/TestNPC"]
script = ExtResource("6_yl66l")
data = ExtResource("7_bmxt5")

[node name="InteractiveComponent" type="Node" parent="EntityManager/TestNPC"]
script = ExtResource("6_ox50e")

[node name="PuppetSpawnerComponent" type="Node" parent="EntityManager/TestNPC"]
script = ExtResource("7_6rhup")

[node name="Player" type="Node" parent="EntityManager" groups=["savegame_entity"]]
script = ExtResource("3_kxsl0")
world = "test world 1"

[node name="PlayerComponent" type="Node" parent="EntityManager/Player"]
script = ExtResource("10_ewjpv")

[node name="TeleportComponent" type="Node" parent="EntityManager/Player"]
script = ExtResource("11_b46tl")

[node name="PuppetSpawnerComponent" type="Node" parent="EntityManager/Player"]
script = ExtResource("7_6rhup")

[node name="Player" parent="EntityManager/Player/PuppetSpawnerComponent" instance=ExtResource("6_ti5ed")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.42557)

[node name="WorldLoader" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("13_wc36v")

[node name="test world 1" parent="WorldLoader" instance=ExtResource("14_t7217")]

[node name="Menu" parent="." instance=ExtResource("14_ivpc4")]

[node name="HUD" parent="." instance=ExtResource("10_vve1a")]
unique_name_in_owner = true
